Update index.html and README.md

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- jwPlayer-->
   <script src="bower_components/jwplayer/dist/jwplayer.js"></script>
-  <script>jwplayer.key="aybD5lOZWCPaU1LUSjrfupxLW+5DJyZKSoGjMg==";</script>
+  <!--WARNING: free jwplayer license key needed; sign up at https://www.jwplayer.com/sign-up/-->
+  <script>jwplayer.key="";</script>
 
 </head>
 <body>
