--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- jwPlayer-->
   <script src="bower_components/jwplayer/dist/jwplayer.js"></script>
-  <!--WARNING: JWPlayer free license key is needed too run the program see prerequisites on README.md for details-->
+  <!--WARNING: JWPlayer free license key is needed too run the program: see prerequisites on README.md for details-->
   <script>jwplayer.key="";</script>
 
 </head>
@@ -95,7 +95,7 @@
         </script>
       </div>
     </div>
-    <!--01 KnockoutJS-->
+    <!--01 KnockoutJS--><!--Comment if 02 or 03 are preferred-->
     <!--Thumbnail's grid with title to trigger modals-->
     <div class="media-grid">
       <div class="row col-lg-12 col-md-12 col-sm-12 main" data-bind="foreach: rows">
@@ -110,6 +110,9 @@
         </div>
       </div>
     </div>
+    <!--END of 01 KnockoutJS-->
+
+    <!--02 KnockoutJS-->
     <!--Thumbnail's grid without title to trigger modals-->
     <!--<div class="media-grid">
       <div class="row col-lg-12 col-md-12 col-sm-12 main" data-bind="foreach: rows">
@@ -122,11 +125,15 @@
       </div>
     </div>-->
 
+    <!--END of 02 KnockoutJS-->
 
-    <!--02 VanillaJS-->
+
+
+    <!--03 VanillaJS--><!--If preferred uncomment, see the note below for the script tag-->
     <!--<div class="text-justify main" id="mediaWrapper">
     </div>-->
-    <!--End of VanillaJS; see note below for the script tag-->
+
+    <!--END of VanillaJS -->
 
     <div class="row" id="buttonRow">
       <div class="col-sm-4 text-center">
@@ -204,9 +211,10 @@
   </div>
 </div>
 <script src="bower_components/knockout/dist/knockout.js"></script>
+<!--script tag for mediaGrid with KnockoutJS framework--><!--uncomment if option 03 is preferred-->
 <script src="js/main.js"></script>
 
-<!--script tag for vanilla js-->
+<!--script tag for mediaGrid in vanilla js-->
 <!--<script src="js/app.js"></script>-->
 
 <!--JavaScript code to load and clear modals dynamically-->
