Fix some problems with styling in media-grid to improve UX

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <h3 class="text-center row-title" data-bind="text: rowName"></h3>
         <div class="row col-lg-12 col-md-12 col-sm-12 mediaHolder">
           <div  class="" data-bind="foreach: rowItems">
-            <div class="col-lg-4 col-md-4 col-sm-4">
-              <img src="" alt="work image" class="modalLink" href="#" data-toggle= "modal" data-title="" data-target="" data-media="" data-bind="attr: {src: imgSrc, 'data-title': elementTitle, 'data-target': dataTarget, 'data-media': dataMedia}">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+              <img src="" alt="work image" class="modalLink img-responsive" href="#" data-toggle= "modal" data-title="" data-target="" data-media="" data-bind="attr: {src: imgSrc, 'data-title': elementTitle, 'data-target': dataTarget, 'data-media': dataMedia}">
               <div class="image-title" data-bind="html: elementTitle"></div>
             </div>
           </div>
